# ciencia_dados

./: README.md  pyproject.toml
notebooks/pln/: .gitignore  introducao_pln.ipynb
notebooks/projeto1/: .gitignore
notebooks/projeto1/analise/: supervisionado.ipynb  tsne.ipynb
notebooks/projeto1/dados/: noticias.csv
notebooks/projeto1/pln/: introducao_pln.ipynb
notebooks/webscraping/data/: noticia_0.json  noticia_1.json  noticia_13.json  noticia_14.json  noticia_15.json  noticia_18.json  noticia_19.json  noticia_20.json  noticia_21.json  noticia_22.json  noticia_23.json  noticia_24.json  noticia_25.json  noticia_26.json  noticia_5.json  noticia_6.json
