[project]
name = "ciencia-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "unidecode>=1.4.0",
]
